# pdp-hackathon

./: README.md
arduino/: README.md  arduino.ino
py3-pdp/: .env.example  .gitignore  README.md  gui.py  pyproject.toml
zmq-uart-pdp/: Cargo.toml  README.md
zmq-uart-pdp/src/: main.rs
