[package]
name = "arduino-pdp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
parking_lot = "0.12"
serialport = "4.2"
tokio = { version = "1.0", features = ["full"] }
zeromq = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
